enum-ptr-tests/tests/fail/union.stderr
error: EnumPtr only supports enums
 --> $DIR/union.rs:6:7
  |
6 | union Foo<'a, 'b> {
  |       ^^^
